--- a/src/scss/components/_video-banner.scss
+++ b/src/scss/components/_video-banner.scss
@@ -61,8 +61,10 @@
 
 .hide-content {
     background-color: $dark;
-    padding: 10px;
+    padding: 15px ;
     .video-js {
+        width: 90vw;    
+        height:     70vh;
         @include media('<tablet') {
             width: 100%;
         }
