--- a/src/scss/components/_products-box.scss
+++ b/src/scss/components/_products-box.scss
@@ -38,6 +38,7 @@
         }
         &:before {
             @include media('<tablet') {
+                @include animate(transform  left );
                 content: '';
                 width: 10px;
                 height: 10px;
@@ -114,6 +115,7 @@
         .col-head {
             position: relative;
             width: 20%;
+
             @include media('<tablet') {
                 width: 100%;
             }
@@ -161,7 +163,6 @@
 
             .head-menu {
                 @extend %listreset;
-
                 opacity: 0;
                 visibility: hidden;
                 position: absolute;
@@ -176,12 +177,17 @@
                 z-index: 99;
                 @include media('>tablet') {
                     @include animate(opacity visibility);
+                    height: auto !important;
                 }
                 @include media('<tablet') {
+                    transition: none !important;
                     position: static;
                     height: 0;
                     background-color: transparent;
                     font-weight: 400;
+                    opacity: 1;
+                    visibility: visible;
+                    overflow: hidden;
                 }
                 li {
                     padding: 9px 5px 9px 33px;
@@ -214,7 +220,7 @@
         }
         .opened .head-menu {
             @include media('<tablet') {
-                height: auto;
+                height: 0;
                 transition: none;
                 opacity: 1;
                 visibility: visible;
@@ -224,7 +230,6 @@
     .box-row-wrapper {
         overflow: hidden;
         width: 100%;
-
         &.opened {
             @include media('<tablet') {
                 .box-row {
@@ -256,10 +261,10 @@
         @include media('<tablet') {
             overflow: hidden;
             z-index: -1;
-            @include animate(all);
+            @include animate(all 0.5s);
             opacity: 0;
             visibility: hidden;
-            position: relative ;
+            position: relative;
             display: block;
             height: 0;
             transform: translateY(-100%);
