added fixes 1-13 point

--- a/src/scss/components/_logos-section.scss
+++ b/src/scss/components/_logos-section.scss
@@ -52,6 +52,11 @@
         	margin-bottom: 10px;	
         }	
     }
+    .logo-holder:hover{
+ img {
+     transform:scale(1.1);
+ }
+    }
     .img-holder {
         padding: 0 15px;
         text-align: center;
@@ -66,10 +71,13 @@
         }	
     }
     img {
+        @include animate(transform);
+        transform:scale;
         width: auto !important;
         display: inline-block;
         max-height: 100%;
         height: auto;
+         transform:scale(1);
     }
     .btn {
         @include animate(background-color color border-radius);
