--- a/src/scss/components/_search-form.scss
+++ b/src/scss/components/_search-form.scss
@@ -1,14 +1,15 @@
 .search-form {
     display: flex;
+    flex-direction: row-reverse;    
     align-items: center;
-    justify-content: flex-start;
+    justify-content: flex-end;
     font-family: $base-font-family;
     max-width: 100%;
     width: 100%;
     padding-top: 14px;	
     input {
         border: none;
-        border-bottom: 1px solid $red;
+        border-bottom: 1px solid rgba($red, .2);
         color: $black;
         font-weight: 100%;
         font-size: 38px;
@@ -32,11 +33,16 @@
         }
         &:focus{
         	outline: none;
+            border-bottom: 1px solid rgba($red, 1); 
+            &+ .btn{
+                transform:scale(1.3);
+            }
         }
     }
     .btn{
     	opacity: 	1;
-    	@include animate(opacity);
+        transform:scale(1);
+    	@include animate(opacity transform);
     	&:hover{
     		opacity: 	.7;
     	}	
