--- a/src/scss/components/_product-popup.scss
+++ b/src/scss/components/_product-popup.scss
@@ -5,6 +5,8 @@
 	@include media('<tablet') {
         	max-width: 600px;
         	padding: 15px;
+        	margin: 0;
+    		vertical-align: top;
     	}
 	&.hide-content {
 		background-color: $white;
