--- a/src/scss/components/_products-filter.scss
+++ b/src/scss/components/_products-filter.scss
@@ -153,7 +153,7 @@
 					text-decoration: line-through;
 				}
 				&:before {
-					content: "X";
+					content: "\00d7";
 					display: inline-block;
 					font-weight: 500;
 					margin-right: 10px;
