--- a/src/scss/components/_accelerator-block.scss
+++ b/src/scss/components/_accelerator-block.scss
@@ -53,7 +53,7 @@
 				height: 6px;
 				background-color: $white;
 				@include media('<tablet') {
-					bottom: -19px;
+					display: none;
 					}
 				}
 			&:hover {
