--- a/src/scss/pages/_products-page.scss
+++ b/src/scss/pages/_products-page.scss
@@ -2,12 +2,6 @@ $light-gray-1:	#f6f6f6;
 $light-gray-2:	#eeeeee;
 
 
-.static-header {
-	#wrapper {
-		
-	}
-}
-
 .products-section-wrapper {
 	padding: 90px 25px 60px 25px;
 	display: flex;
@@ -95,6 +89,13 @@ $light-gray-2:	#eeeeee;
     		width: 100%;
         	min-height: 220px;
     	}
+    	> a {
+			display: block;
+			width: 100%;
+			&:focus {
+				outline: none;
+			}
+    	}
 		.product-img {
 			width: 100%;
 			height: 164px;
@@ -135,6 +136,7 @@ $light-gray-2:	#eeeeee;
 			text-align: center;
 			font-size: 22px;
 			font-weight: 500;
+			color: $black;
 			word-wrap: break-word;
 			@include media('<desktop') {
 				padding-top: 15px;
