--- a/src/scss/components/_video-carousel.scss
+++ b/src/scss/components/_video-carousel.scss
@@ -34,7 +34,7 @@ html body.ios {
     }
     .seeThru-poster {
         top: -2px !important;
-        left: -2 !important;
+        left: -2px !important;
         right: -2px !important;
         bottom: -2px !important;
         width: auto !important;
