--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -125,7 +125,7 @@
                 display: block;
                 margin-bottom: 6px;
                 @include media('<tablet') {
-                    z-index: 11px;
+                    z-index: 11;
                     margin-bottom: 0;
                 }
             }
