--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -112,7 +112,7 @@
         @include animate(transform);
         display: flex;
         align-items: center;
-        justify-conent: flex-end;
+        justify-content: flex-end;
         font-size: 19px;
         margin-top: 25px;
         float: right;
