--- a/src/scss/pages/_estampille.scss
+++ b/src/scss/pages/_estampille.scss
@@ -4,6 +4,7 @@
 	background-position: 0 15%;
 }
 .default-section.img-bg {
+	background-repeat: no-repeat;
 	.text-image-box {
 		padding: 0 35px;
 		justify-content: space-between;
